--- a/geonode/contrib/risks/client/package.json
+++ b/geonode/contrib/risks/client/package.json
@@ -7,7 +7,7 @@
   "devDependencies": {
     "babel-core": "6.8.0",
     "babel-eslint": "4.1.8",
-    "babel-istanbul-loader": "^0.1.0",
+    "babel-istanbul-loader": "0.1.0",
     "babel-loader": "6.2.4",
     "babel-plugin-add-module-exports": "0.1.4",
     "babel-plugin-object-assign": "1.2.1",
@@ -15,19 +15,22 @@
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-stage-0": "6.5.0",
-    "canvg-browser": "^1.0.0",
-    "codemirror": "5.18.2",
+    "copy-webpack-plugin": "4.0.1",
     "css-loader": "0.19.0",
+    "docma": "1.5.1",
     "download-cli": "1.0.1",
     "escope": "3.2.0",
     "eslint": "0.24.1",
     "eslint-plugin-react": "3.0.0",
     "exists-file": "1.0.2",
-    "expect": "1.13.4",
-    "extract-text-webpack-plugin": "2.0.0-rc.3",
+    "expect": "1.20.1",
+    "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.8.5",
+    "glob": "7.1.1",
     "html-webpack-plugin": "2.17.0",
     "istanbul-instrumenter-loader": "2.0.0",
+    "jsdoc": "3.4.3",
+    "jsdoc-jsx": "0.1.0",
     "karma": "1.5.0",
     "karma-chrome-launcher": "2.0.0",
     "karma-cli": "1.0.1",
@@ -46,14 +49,14 @@
     "mocha": "2.4.5",
     "ncp": "2.0.0",
     "parallelshell": "1.2.0",
+    "postcss": "5.2.16",
+    "postcss-loader": "1.3.3",
+    "postcss-prefix-selector": "1.6.0",
     "raw-loader": "0.5.1",
     "react-addons-css-transition-group": "15.4.2",
     "react-addons-test-utils": "15.4.2",
     "react-hot-loader": "1.3.1",
     "react-motion": "0.4.4",
-    "react-router": "2.5.2",
-    "react-router-redux": "2.1.0",
-    "react-select": "1.0.0-rc.1",
     "react-transform-catch-errors": "1.0.2",
     "redbox-react": "1.2.4",
     "redux-devtools": "3.3.2",
@@ -79,8 +82,10 @@
     "babel-standalone": "6.7.7",
     "bootstrap": "3.3.6",
     "canvas-to-blob": "0.0.0",
+    "canvg-browser": "1.0.0",
     "chroma-js": "^1.2.2",
     "classnames": "2.2.5",
+    "codemirror": "5.18.2",
     "colorbrewer": "1.0.0",
     "es6-promise": "2.3.0",
     "eventlistener": "0.0.1",
@@ -99,7 +104,6 @@
     "leaflet.locatecontrol": "0.45.1",
     "lodash": "4.17.4",
     "moment": "2.13.0",
-    "node-uuid": "1.4.3",
     "object-assign": "4.1.1",
     "ogc-schemas": "2.6.1",
     "openlayers": "4.0.1",
@@ -110,28 +114,33 @@
     "react-addons-shallow-compare": "15.4.2",
     "react-bootstrap": "0.30.7",
     "react-codemirror": "0.2.6",
-    "react-color": "2.4.0",
+    "react-color": "2.11.3",
     "react-confirm-button": "0.0.2",
     "react-copy-to-clipboard": "4.1.0",
     "react-dnd": "2.2.3",
     "react-dnd-html5-backend": "2.2.3",
     "react-dock": "0.2.3",
     "react-dom": "15.4.2",
-    "react-draggable": "1.3.4",
+    "react-draggable": "2.2.3",
     "react-dropzone": "3.4.0",
     "react-intl": "2.2.3",
     "react-joyride": "1.10.1",
     "react-nouislider": "1.11.0",
     "react-overlays": "0.6.3",
-    "react-pdf": "0.0.10",
+    "react-pdf": "1.6.1",
     "react-redux": "4.4.1",
     "react-responsive": "1.1.3",
+    "react-router": "2.5.2",
+    "react-router-redux": "3.0.0",
+    "react-select": "1.0.0-rc.1",
     "react-selectize": "2.0.3",
     "react-share": "1.8.0",
-    "react-sidebar": "2.1.2",
+    "react-side-effect": "1.1.0",
+    "react-sidebar": "2.3.0",
     "react-sortable-items": "https://github.com/geosolutions-it/react-sortable-items/tarball/react15",
-    "react-spinkit": "1.1.6",
-    "react-swipeable-views": "0.6.3",
+    "react-spinkit": "2.1.1",
+    "react-swipeable-views": "0.11.1",
+    "react-twitter-widgets": "1.2.0",
     "react-widgets": "3.4.6",
     "recharts": "^0.21.2",
     "redux": "3.6.0",
@@ -148,13 +157,14 @@
     "turf-intersect": "3.0.10",
     "turf-point-on-surface": "3.0.10",
     "turf-union": "3.0.10",
+    "uuid": "3.0.1",
     "url": "0.10.3",
     "w3c-schemas": "1.3.1",
     "xml2js": "0.4.17"
   },
   "scripts": {
     "clean": "rimraf dist",
-    "compile": "npm run clean && mkdirp ./dist && webpack --config prod-webpack.config.js",
+    "compile": "npm run clean && mkdirp ./dist && webpack --progress --config prod-webpack.config.js",
     "genRiskCss": "lessc assets/css/risk.less assets/css/risk.css && lessc assets/css/risk-disaster.less assets/css/disaster.css",
     "start": "webpack-dev-server --progress --colors --port 8081 --hot --inline --content-base .",
     "test": "karma start ./karma.conf.single-run.js",
