--- a/geonode/contrib/risks/client/package.json
+++ b/geonode/contrib/risks/client/package.json
@@ -108,6 +108,7 @@
     "object-assign": "4.1.1",
     "ogc-schemas": "2.6.1",
     "openlayers": "4.0.1",
+    "optimize-css-assets-webpack-plugin": "^1.3.0",
     "pdfviewer": "0.3.2",
     "proj4": "2.3.14",
     "qrcode.react": "0.6.1",
